--- a/templates/master.html
+++ b/templates/master.html
@@ -35,19 +35,19 @@
 					<div class="col-sm-6">
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
-								<li><a href="#"><i class="fa fa-phone"></i> +91 8830842089</a></li>
-								<li><a href="#"><i class="fa fa-envelope"></i> shreyamulay17@gmail.com</a></li>
+								<li><a href=""><i class="fa fa-phone"></i> +91 8830842089</a></li>
+								<li><a href=""><i class="fa fa-envelope"></i> shreyamulay17@gmail.com</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-6">
 						<div class="social-icons pull-right">
 							<ul class="nav navbar-nav">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href=""><i class="fa fa-facebook"></i></a></li>
+								<li><a href=""><i class="fa fa-twitter"></i></a></li>
+								<li><a href=""><i class="fa fa-linkedin"></i></a></li>
+								<li><a href=""><i class="fa fa-dribbble"></i></a></li>
+								<li><a href=""><i class="fa fa-google-plus"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -60,7 +60,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="logo pull-left">
-							<a href="index.html"><img src="/static/images/home/logo2.jpg" alt="" /></a>
+							<a href="{% url 'index' %}"><img src="/static/images/home/logo2.jpg" alt="" /></a>
 						</div>
 						<!-- <div class="btn-group pull-right">
 							<div class="btn-group">
@@ -89,9 +89,9 @@
 					<div class="col-sm-8">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
-								<li><a href="#"><i class="fa fa-user"></i> Account</a></li>
+								<!-- <li><a href="#"><i class="fa fa-user"></i> Account</a></li> -->
 								<li><a href="/order/"><i class="fa fa-star"></i> Your Order</a></li>
-								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+								<!-- <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li> -->
 								<li><a href="/cart/cart-detail/"><i class="fa fa-shopping-cart"></i> Cart <span class="badge text-bg-secondary">{{request.session.cart|length}}</span></a></li>
 
 								{% if user.is_authenticated %}
@@ -125,19 +125,21 @@
 								<li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="/product/">Products</a></li>
-										<li><a href="product-details.html">Product Details</a></li> 
-										<li><a href="checkout.html">Checkout</a></li> 
+										<!-- <li><a href="product-details.html">Product Details</a></li>  -->
+										<!-- <li><a href="checkout.html">Checkout</a></li>  -->
 										<li><a href="/cart/cart-detail/">Cart</a></li> 
-										<li><a href="/accounts/login/">Login</a></li> 
+										{% if not user.is_authenticated %}
+											<li><a href="/accounts/login/">Login</a></li> 
+										{% endif %}
                                     </ul>
                                 </li> 
-								<li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
+								<!-- <li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="blog.html">Blog List</a></li>
 										<li><a href="blog-single.html">Blog Single</a></li>
                                     </ul>
-                                </li> 
-								<li><a href="404.html">404</a></li>
+                                </li>  -->
+								<!-- <li><a href="404.html">404</a></li> -->
 								<li><a href="{% url 'contact' %}">Contact</a></li>
 							</ul>
 						</div>
@@ -308,7 +310,7 @@
 		<div class="footer-bottom">
 			<div class="container">
 				<div class="row">
-					<p class="pull-left">Copyright © 2013 M-ONGINIS Inc. All rights reserved.</p>
+					<p class="pull-left">Copyright © 2024 M-ONGINIS Inc. All rights reserved.</p>
 				</div>
 			</div>
 		</div>
