--- a/templates/placeorder.html
+++ b/templates/placeorder.html
@@ -1,12 +1,14 @@
+
 {% extends 'master.html' %}
 {% block body %}
 
 <section id="cart_items">
     <div class="container">
+        <h3>Your Order</h3>
         <div class="breadcrumbs">
             <ol class="breadcrumb">
               <li><a href="#">Home</a></li>
-              <li class="active">Shopping Cart</li>
+              <li class="active">Your Order </li>
             </ol>
         </div>
         <div class="table-responsive cart_info">
@@ -24,7 +26,7 @@
                 <tbody>
 
                 {% for key,value in request.session.cart.items %}
-                <a href="{% url 'cart_clear' %}">Clear Cart</a>
+                <!-- <a href="{% url 'cart_clear' %}">Clear Cart</a> -->
 
                     <tr>
                         <td class="cart_product">
@@ -38,17 +40,13 @@
                         </td>
                         <td class="cart_quantity">
                             <div class="cart_quantity_button">
-                                <a class="cart_quantity_up" href="{% url 'item_increment' value.product_id %}"> + </a>
-                                <input class="cart_quantity_input" type="text" name="quantity" value="{{value.quantity}} " autocomplete="off" size="2">
-                                <a class="cart_quantity_down" href="{% url 'item_decrement' value.product_id %}"> - </a>
+                                <a>{{value.quantity}}</a>
                             </div>
                         </td>
                         <td class="cart_total">
                             <p class="cart_total_price">₹  {{ value.price }} *{{value.quantity }}</p>
                         </td>
-                        <td class="cart_delete col-is-1">
-                            <a class="cart_quantity_delete" href="{% url 'item_clear' key %}"><i class="fa fa-times"></i></a>
-                        </td>
+                       
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -81,7 +79,7 @@
                     {% if not request.session.cart|length == 0 %}
                       <td>
                           <hr>
-                          <h3>₹ {{cart_total_amount}}</h3>
+                          <h3>₹  {{cart_total_amount}}</h3>
                       </td>
                     {% endif %}
 
@@ -89,58 +87,58 @@
             </table>
         </div>
         
-        {% if  not request.session.cart|length == 0 %}
-          <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" style="float:right">Checkout</button> -->
+          <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" style="float:right"></button> -->
+
+        {% if paymentmode == 'Online' %}
+        
+            <a id="rzp-button1">
+                <button type="button" class="btn btn-primary" style="float:right;margin-top:0;margin-bottom: 15px;">Place Order </button>
+            </a>
+
+        {% elif  paymentmode == 'Offline' %}
+
+
+            <a href="{% url 'success' %}" class="btn btn-primary" style="float:right;margin-top:0;margin-bottom: 15px;">Place Order </a>
 
           
-        <form action="{% url 'checkout' %}" method="post">
-          {% csrf_token %}
-        <input name="amount" value="{{cart_total_amount}}" hidden>
-        <button type="submit" class="btn btn-primary" style="float:right">Checkout</button>
-         </form>
-
         {% endif %}
-        
-
+            
 
     </div>
 </section> 
 
-<br>
+<form action="{% url 'success' %}" method="post">
 
 
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form method="post" action="/checkout/">
-            {% csrf_token %}
-          <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Phone:</label>
-            <input type="text" name="phone" class="form-control" id="recipient-name">
-          </div>
-          <div class="form-group">
-            <label for="message-text" class="col-form-label">Address:</label>
-            <textarea class="form-control" name="address" id="message-text"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="message-text" class="col-form-label">Pincode:</label>
-            <textarea class="form-control" name="pincode"></textarea>
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-primary" >Checkout</button>
-          </div>
-        </form>
-      </div>
-     
-    </div>
-  </div>
-</div>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
+var options = {
+    "key": "rzp_test_RIpjeYub2niDsp", 
+    "amount": "50000", 
+    "currency": "INR",
+    "name": "Acme Corp",
+    "description": "Test Transaction",
+    "image": "https://example.com/your_logo",
+    "order_id": "{{order_id}}",
+    "callback_url": "http://127.0.0.1:8000/success",
+    "prefill": {
+        "name": "Gaurav Kumar",
+        "email": "gaurav.kumar@example.com",
+        "contact": "9000090000"
+    },
+    "notes": {
+        "address": "Razorpay Corporate Office"
+    },
+    "theme": {
+        "color": "#3399cc"
+    }
+};
+var rzp1 = new Razorpay(options);
+document.getElementById('rzp-button1').onclick = function(e){
+    rzp1.open();
+    e.preventDefault();
+}
+</script>
+</form>
 {% endblock %}
