--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,12 +2,22 @@
 
 {% block body %}
 
-<section id="form" style="margin-left: 30%;">
+<section id="form">
         <div class="container">
-            <div class="col-sm-4 col-sm-offset-1">
+            <div class="card card-1 col-sm-4 col-sm-offset-1">
 
                 <div class="signup-form">
-                    <h2>Login To Your Account</h2>
+
+                    <div class="login-register-tab-list nav">
+                        <a class="active" data-bs-toggle="tab" href="{% url 'login' %}">
+                            <h4>login</h4>
+                        </a>
+                        |
+                        <a data-bs-toggle="tab" href="{% url 'signup' %}">
+                            <h4>register</h4>
+                        </a>
+                    </div>
+
                     <form method="POST">
                         {% csrf_token %}
                         {% for field in form %}
@@ -17,9 +27,9 @@
                         {% endfor %}
                         <a href="{% url 'password_reset' %}" class="" style="float: right;">Forgot Password ?</a><br/>
 
-                        <button clas="btn btn-default" type="submit">Login</button>
+                        <button clas="btn btn-default" type="submit" style="margin-top: 40px;">Login</button>
 
-                        <a href="{% url 'signup' %}" class="href"><span style="color: black;margin-left: 120px;">Create Your Account &nbsp;&rarr;</span></a>
+                        <!-- <a href="{% url 'signup' %}" class="href"><span style="color: black;margin-left: 120px;">Create Your Account &nbsp;&rarr;</span></a> -->
                         
                     </form>
                 </div>
@@ -27,4 +37,5 @@
             </div>
         </div>
 </section>
+
 {% endblock %}
