--- a/templates/product.html
+++ b/templates/product.html
@@ -45,18 +45,18 @@
                         </div>
                     </div>
                     
-                    <div class="price-range"><!--price-range-->
+                    <!-- <div class="price-range">
                         <h2>Price Range</h2>
                         <div class="well">
                              <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="600" data-slider-step="5" data-slider-value="[250,450]" id="sl2" ><br />
                              <b>$ 0</b> <b class="pull-right">$ 600</b>
                         </div>
-                    </div><!--/price-range-->
+                    </div>
                     
-                    <div class="shipping text-center"><!--shipping-->
+                    <div class="shipping text-center">
                         <img src="images/home/shipping.jpg" alt="" />
-                    </div><!--/shipping-->
-                    
+                    </div>
+                     -->
                 </div>
             </div>
             
@@ -75,7 +75,7 @@
                                     </div>
                                     <div class="product-overlay">
                                         <div class="overlay-content">
-                                            <h2>₹ {{pro.price}}</h2>
+                                            <h2>₹ {{prod.price}}</h2>
                                             <p>{{prod.name}}</p>
                                             <a href="{% url 'cart_add' prod.id %}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                                         </div>
@@ -91,12 +91,12 @@
 
                     {% endfor %}
                
-                    <ul class="pagination">
+                    <!-- <ul class="pagination">
                         <li class="active"><a href="">1</a></li>
                         <li><a href="">2</a></li>
                         <li><a href="">3</a></li>
                         <li><a href="">&raquo;</a></li>
-                    </ul>
+                    </ul> -->
                 </div><!--features_items-->
             </div>
         </div>
