--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
 
     {% if product|length < 1 %}
 
-    <div class="content-404">
+    <div class="content-404 text-center">
         <img src="images/404/404.png" class="img-responsive" alt="" />
         <h1><b>OPPS!</b> We Couldn’t Find this Product</h1>
         <p>Uh... So it looks like you brock something. The page you are looking for has up and Vanished.</p>
@@ -28,18 +28,18 @@
                     </div>
                     <div class="product-overlay">
                         <div class="overlay-content">
-                            <h2>₹ {{pro.price}}</h2>
+                            <h2>₹ {{prod.price}}</h2>
                             <p>{{prod.name}}</p>
                             <a href="{% url 'cart_add' prod.id %}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                         </div>
                     </div>
             </div>
-            <div class="choose">
+            <!-- <div class="choose">
                 <ul class="nav nav-pills nav-justified">
                     <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
                     <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
 
